--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -66,6 +66,9 @@ function ClickRibbon (itemid,state) {
     case 'menu_index':
         window.location = "{{ url('arii_ATS_index') }}";
         break;
+    case 'menu_boxes':
+        window.location = "{{ url('arii_ATS_jobs') }}";
+        break;
     case 'menu_jobs':
         window.location = "{{ url('arii_ATS_jobs') }}";
         break;
