--- a/Resources/views/Boxes/index.html.twig
+++ b/Resources/views/Boxes/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <script type="text/javascript">
 var max_history = 0; // pas d'historique
-var box_only = 0; // que des standalone
+var chained = 0; // que des standalone
 var only_warning = 1; // que les problemes
 var update=30;
 var autorefresh;
@@ -48,7 +48,7 @@ dhtmlxEvent(window,"load",function(){
                 align:"left"
             } 
     });
-    myDonut.load(  "{{ url('xml_ATS_jobs_pie') }}?box_only="+box_only+"&only_warning="+only_warning );
+    myDonut.load(  "{{ url('xml_ATS_jobs_pie') }}?chained="+chained+"&only_warning="+only_warning );
     
     myTree = myTab.cells("b2").attachTree();
     myTree.setImagesPath("{{ asset('bundles/ariicore/images/tree/') }}");
@@ -71,7 +71,7 @@ dhtmlxEvent(window,"load",function(){
     myGrid.enableContextMenu(myGridMenu);
     myGrid.attachEvent("onBeforeContextMenu", onShowMenu );
     myGrid.init();
-    myGrid.load( "{{ url('xml_ATS_jobs_grid') }}?history="+max_history+"&box_only="+box_only+"&only_warning="+only_warning);
+    myGrid.load( "{{ url('xml_ATS_jobs_grid') }}?history="+max_history+"&chained="+chained+"&only_warning="+only_warning);
     myGrid.attachEvent("onRowDblClicked",JobDetail );
 
     myDonut.attachEvent("onItemClick",function(id, value){
@@ -250,11 +250,11 @@ function GridRefresh() {
     seconds = "0" + seconds;
     }
     myRibbon.setItemText( "refresh", hours + ":" + minutes + ":" +  seconds );
-    myGrid.load("{{ url('xml_ATS_jobs_grid') }}?time="+seconds+"&history="+max_history+"&box_only="+box_only+"&only_warning="+only_warning, function(){    
+    myGrid.load("{{ url('xml_ATS_jobs_grid') }}?time="+seconds+"&history="+max_history+"&chained="+chained+"&only_warning="+only_warning, function(){    
         globalLayout.cells("b").progressOff();
         myGrid.refreshFilters();
         myGrid.filterByAll();
-        myDonut.load( "{{ url('xml_ATS_jobs_pie') }}?box_only="+box_only+"&only_warning="+only_warning, function () {
+        myDonut.load( "{{ url('xml_ATS_jobs_pie') }}?chained="+chained+"&only_warning="+only_warning, function () {
             myDonut.refresh();                
             globalLayout.progressOff();
             globalLayout.cells("a").progressOff();
