--- a/Resources/views/Default/ribbon.json.twig
+++ b/Resources/views/Default/ribbon.json.twig
@@ -17,6 +17,7 @@
                  img:   "view.png", 
                  items:
                  [ 
+                    { id:"menu_boxes", text: "{{ "Boxes" | trans }}", img: "box.png" },
                     { id:"menu_jobs", text: "{{ "Jobs" | trans }}", img: "job.png" },
                     { id:"menu_alarms", text: "{{ "Alarms" | trans }}", img: "alarm.png" },                    
                     { id:"menu_audit", text: "{{ "Audit" | trans }}", img: "shield.png" },                    
@@ -122,8 +123,9 @@
               {   id : "group_2", 
                   type : "group", 
                   list : 
-                  [   {id:"only_warning","type":"buttonTwoState",text:"","img":"warning.png", state: true }
-,                      
+                  [   
+                        {id:"only_warning","type":"buttonTwoState",text:"","img":"warning.png", state: true },
+                        {id:"box_only","type":"buttonTwoState",text:"","img":"box.png", state: true }
                   ]
               },
 {% set current_db = app.session.get('database') %} 
