Formulaire de demande

--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -102,6 +102,9 @@ function ClickRibbon (itemid,state) {
     case 'menu_templates':
         window.location = "{{ url('arii_ATS_templates') }}";
         break;
+    case 'form':
+        window.location = "{{ url('arii_ATS_form') }}";
+        break;
     case 'filter_edit':
         window.location = "{{ url('arii_filters') }}";
         break;
