Suppression des parametres

--- a/Resources/views/Default/ribbon.json.twig
+++ b/Resources/views/Default/ribbon.json.twig
@@ -70,9 +70,9 @@
                  img:   "tools.png", 
                  items:
                  [ 
-//                    { id:"menu_templates", text: "{{ "Templates" | trans }}", img: "package.png" },
+                    { id:"menu_templates", text: "{{ "Templates" | trans }}", img: "package.png" },
                     { id:"form", text: "{{ "Form request" | trans }}", img: "application_form.png" },
-//                    { id:"cron", text: "{{ "Cron converter" | trans }}", img: "cron.png" },
+                    { id:"cron", text: "{{ "Cron converter" | trans }}", img: "cron.png" },
                     { id:"config", text: "{{ "Config" | trans }}", img: "config.png" },
                  ]
               }              
