--- a/Resources/views/Jobs/grid_menu.xml.twig
+++ b/Resources/views/Jobs/grid_menu.xml.twig
@@ -2,6 +2,7 @@
 <menu>
 <!--    <item id="menu_job" text="{{ "Job" | trans }}"  img="job.png"> -->
         <item id="job_history"   text="{{ "Job history" | trans }}" img="history.png"></item>
+        <item id="job_note"   text="{{ "Job note" | trans }}" img="note_edit.png"></item>
 <!--        <item id="job_detail"   text="{{ "Job detail" | trans }}" img="info.png"></item>
     </item> -->
 </menu>
