Standby sur les boites, attente de validation des jobs

--- a/Resources/views/Jobs/grid_toolbar.xml.twig
+++ b/Resources/views/Jobs/grid_toolbar.xml.twig
@@ -1,7 +1,6 @@
 <toolbar>
-    <item type="buttonTwoState" title="{{ "Location" | trans }}" id="location" img="server.png"/>
-    <item type="buttonTwoState" title="{{ "Execution" | trans }}" id="execution" img="cog.png"/>
-    <item type="buttonTwoState" title="{{ "Variables" | trans }}" id="variable" img="config.png"/>
+    <item type="buttonTwoState" title="{{ "Boxes" | trans }}" id="boxes" img="package.png"/>
+    <item type="buttonTwoState" title="{{ "Description" | trans }}" id="desc" img="comment.png"/>
     <item id="sep2" type="separator"/>
     <item type="button" id="print" img="printer.png"/>
     <item id="sepr" type="separator"/>
