Filtre de boite

--- a/Resources/views/Default/ribbon.json.twig
+++ b/Resources/views/Default/ribbon.json.twig
@@ -126,7 +126,7 @@
                   list : 
                   [   
                         {id:"only_warning","type":"buttonTwoState",text:"","img":"warning.png", state: true },
-                        {id:"box_only","type":"buttonTwoState",text:"","img":"box.png", state: false }
+                        {id:"box","type":"buttonTwoState",text:"","img":"box.png", state: false }
                   ]
               },
 {% set current_db = app.session.get('database') %} 
