--- a/Resources/views/Requests/bootstrap.html.twig
+++ b/Resources/views/Requests/bootstrap.html.twig
@@ -8,7 +8,7 @@
 <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="{{ asset('bootstrap/js/bootstrap.min.js') }}"></script>
 <script src="{{ asset('bundles/ariiats/js/jquery.tablesorter.min.js') }}"></script>
-
+<script src="{{ asset('dhtmlx/codebase/dhtmlx.js') }}" type="text/javascript"></script>
 {% endblock %} 
 {% block body %}
 <body>
